--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,7 @@ services:
   backend:
     image: mhart/alpine-node:7.5.0
     container_name: backend
-    command: 'tail -f /dev/null'
-    # command: ["npm", "run", "devdockerstart"]
+    command: ["npm", "run", "devdockerstart"]
     working_dir: '/backend'
     environment:
       - HOSTNAME=localhost
