--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,9 @@
     "eslint-plugin-react": "^6.10.3"
   },
   "dependencies": {
+    "bluebird": "^3.5.0",
     "express": "^4.15.2",
+    "mongoose": "^4.9.2",
     "pm2": "^2.4.2"
   }
 }
