--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,17 @@ services:
     command: ["npm", "run", "devdockerstart"]
     working_dir: '/backend'
     environment:
-      - HOSTNAME=localhost
       - PORT=3000
       - MONGO_URL=mongodb
     ports:
       - 3000:3000
-    # links:
-    #   - mongodb
+    links:
+      - mongodb
     volumes:
       - ./backend:/backend
+
+  mongodb:
+    image: mongo:3.0.14
+    container_name: mongodb
+    ports:
+      - 27017:27017
