--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,9 @@
   },
   "dependencies": {
     "bluebird": "^3.5.0",
+    "body-parser": "^1.17.1",
     "express": "^4.15.2",
+    "express-validator": "^3.1.2",
     "mocha": "^3.2.0",
     "mongoose": "^4.9.2",
     "pm2": "^2.4.2",
