--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "eslint-plugin-react": "^6.10.3"
   },
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
