--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,9 @@
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
+    "express-jwt": "^5.1.0",
     "express-validator": "^3.1.2",
+    "jsonwebtoken": "^7.3.0",
     "mocha": "^3.2.0",
     "mongoose": "^4.9.2",
     "pm2": "^2.4.2",
