--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,5 +14,9 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.3"
+  },
+  "dependencies": {
+    "webpack": "^2.3.2",
+    "webpack-dev-server": "^2.4.2"
   }
 }
