--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,9 @@
     "eslint-plugin-react": "^6.10.3"
   },
   "dependencies": {
+    "css-loader": "^0.27.3",
+    "file-loader": "^0.10.1",
+    "style-loader": "^0.16.1",
     "webpack": "^2.3.2",
     "webpack-dev-server": "^2.4.2"
   }
