--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,9 @@
   "dependencies": {
     "css-loader": "^0.27.3",
     "file-loader": "^0.10.1",
+    "html-webpack-plugin": "^2.28.0",
+    "preact": "^7.2.1",
+    "preact-compat": "^3.14.3",
     "style-loader": "^0.16.1",
     "webpack": "^2.3.2",
     "webpack-dev-server": "^2.4.2"
