--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,10 @@
     "eslint-plugin-react": "^6.10.3"
   },
   "dependencies": {
+    "babel-core": "^6.24.0",
+    "babel-loader": "^6.4.1",
+    "babel-preset-es2015": "^6.24.0",
+    "babel-preset-react": "^6.23.0",
     "css-loader": "^0.27.3",
     "file-loader": "^0.10.1",
     "html-webpack-plugin": "^2.28.0",
