--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack -p",
+    "devdockerstart": "npm install; npm start",
+    "start": "webpack-dev-server --hot --progress --colors --inline --host 0.0.0.0"
   },
   "author": "",
   "license": "ISC",
