--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,11 +19,10 @@ services:
   frontend:
     image: node:6.10.1-alpine
     container_name: /frontend
-    command: ["tail", "-f", "/dev/null"]
-    # command: ["npm", "run", "devdockerstart"]
+    command: ["npm", "run", "devdockerstart"]
     working_dir: '/frontend'
     ports:
-      - 8000:8000
+      - 8080:8080
     volumes:
       - ./frontend:/frontend
 
