--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,15 +19,18 @@
     "eslint-plugin-react": "^6.10.3"
   },
   "dependencies": {
+    "axios": "^0.15.3",
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
     "css-loader": "^0.27.3",
     "file-loader": "^0.10.1",
+    "history": "^4.6.1",
     "html-webpack-plugin": "^2.28.0",
     "preact": "^7.2.1",
     "preact-compat": "^3.14.3",
+    "react-router": "^2.0.1",
     "style-loader": "^0.16.1",
     "webpack": "^2.3.2",
     "webpack-dev-server": "^2.4.2"
