--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,14 +24,18 @@
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
+    "bootstrap": "^3.3.7",
     "css-loader": "^0.27.3",
     "file-loader": "^0.10.1",
+    "form-data": "^2.1.2",
     "history": "^4.6.1",
     "html-webpack-plugin": "^2.28.0",
     "preact": "^7.2.1",
     "preact-compat": "^3.14.3",
+    "react-bootstrap": "^0.30.8",
     "react-router": "^2.0.1",
     "style-loader": "^0.16.1",
+    "url-loader": "^0.5.8",
     "webpack": "^2.3.2",
     "webpack-dev-server": "^2.4.2"
   }
